# test-gap

./: .gitignore  .testgap.yml  LICENSE  README.md  pyproject.toml
.claude/agents/: developer.md  plan-validator.md  planner.md  reviewer.md
.claude/commands/: develop.md  harness.md  plan.md  resolve-reviews.md  review.md
.claude/skills/develop/: skill.md
.claude/skills/harness/: skill.md
.claude/skills/plan/: skill.md
.claude/skills/resolve-reviews/: skill.md
.claude/skills/review/: skill.md
src/testgap/: __init__.py  __main__.py  backfill.py  cli.py  cli_backfill.py  cli_doctor.py  cli_scan.py  pipeline.py  scan.py
src/testgap/config/: __init__.py  init_wizard.py  loader.py  schema.py
src/testgap/cost/: __init__.py  tracker.py
src/testgap/coverage/: __init__.py  ast_grouping.py  diff_coverage.py  git_diff.py  runner.py
src/testgap/detect/: __init__.py  _toml.py  cache.py  layout_detect.py  llm_provider.py  pytest_detect.py  python_env.py  test_dir_detect.py
src/testgap/generator/: __init__.py  few_shot.py  llm_client.py  parser.py  prompt.py
src/testgap/session_logging/: __init__.py  events.py  session_log.py
src/testgap/ui/: __init__.py  interactive.py
src/testgap/validator/: __init__.py  result.py  runner.py
tests/: conftest.py  test_ast_grouping.py  test_backfill.py  test_cli_backfill.py  test_cli_diff_review.py  test_cli_doctor.py  test_cli_scan.py  test_config_loader.py  test_config_schema.py  test_cost_tracker.py  test_detect_cache.py  test_detect_layout.py  test_detect_pytest.py  test_detect_test_dir.py  test_diff_coverage.py  test_generator_few_shot.py  test_generator_parser.py  test_generator_prompt.py  test_git_diff.py  test_init_wizard.py  test_llm_client_capture.py  test_llm_detect.py  test_llm_error_summary.py  test_pipeline.py  test_python_env.py  test_runner_python_override.py  test_scan.py  test_session_logging.py  test_session_logging_integration.py  test_ui_interactive.py  test_validator_result.py
